Css cleaning, correct modal wrapping, starting working on projet

--- a/src/styles/AccueilSection.css
+++ b/src/styles/AccueilSection.css
@@ -97,35 +97,6 @@
   overflow: hidden;
 }
 
-.accueil-option-wheel {
-  position: absolute;
-  bottom: 20px;
-  right: 25px;
-  z-index: 0;
-  width: 50px;
-  height: 50px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 50%;
-  background: #ffffff;
-  box-shadow: 0 4px 10px rgba(0,0,0,0.2);
-  cursor: pointer;
-  transition: background 0.3s;
-  border: none;
-  }
-
-.accueil-option-wheel:hover .accueil-option-wheel-icon {
-  transform: rotate(90deg);
-}
-
-.accueil-option-wheel-icon {
-  width: 40px;
-  height: 40px;
-  color: #2575fc;
-  transition: transform 0.3s ease;
-}
-
 .accueil-font-row {
   display: flex;
   align-items: center;
